Fixed bug #34064 (arr[] as param to function is allowed only if function receives argument by reference)